option('with_freelist32_size_max', type: 'integer', value: 3, description: 'max size of freelist on 32 bit platforms')
option('with_freelist64_size_max', type: 'integer', value: 3, description: 'max size of freelist on 64 bit platforms')
option('enable_cpprofiler', type: 'boolean', value: true, description: 'build with support for CPProfiler')
option('enable_audit', type: 'boolean', value: false, description: 'build with auditing code')
option('enable_allocator', type: 'boolean', value: true, description: 'build with default memory allocator')
option('with_lib_prefix', type: 'string', value: '""')
option('with_lib_suffix', type: 'string', value: '""')
option('enable_cbs', type: 'boolean', value: false, description: 'build with support for counting-based search')
option('enable_float_vars', type: 'boolean', value: true, description: 'build float variable library')
option('enable_int_vars', type: 'boolean', value: true, description: 'build finite domain library')
option('enable_set_vars', type: 'boolean', value: true, description: 'build finite set library')
option('enable_gist', type: 'boolean', value: true, description: 'build Gecode Interactive Search Tool')
option('enable_leak_debug', type: 'boolean', value: false, description: 'build with support for finding memory leaks')
option('enable_peakheap', type: 'boolean', value: false, description: 'build with peak heap size tracking')
option('enable_minimodel', type: 'boolean', value: true, description: 'build modeling support library for the enabled variable types')
option('enable_search', type: 'boolean', value: true, description: 'build search engines')
option('enable_driver', type: 'boolean', value: true, description: 'build script commandline driver library')
option('enable_flatzinc', type: 'boolean', value: true, description: 'build FlatZinc interpreter')
option('enable_thread', type: 'boolean', value: true, description: 'build with multi-threading support')
