gecodeint_lib = library(
    'gecodeint'
  , 'arithmetic.cpp'
  , 'array.cpp'
  , 'bin-packing.cpp'
  , 'bool.cpp'
  , 'branch.cpp'
  , 'channel.cpp'
  , 'circuit.cpp'
  , 'count.cpp'
  , 'cumulative.cpp'
  , 'cumulatives.cpp'
  , 'distinct.cpp'
  , 'dom.cpp'
  , 'element.cpp'
  , 'exception.cpp'
  , 'exec.cpp'
  , 'extensional-regular.cpp'
  , 'extensional-tuple-set.cpp'
  , 'gcc.cpp'
  , 'int-set.cpp'
  , 'ldsb.cpp'
  , 'linear-bool.cpp'
  , 'linear-int.cpp'
  , 'member.cpp'
  , 'no-overlap.cpp'
  , 'nvalues.cpp'
  , 'order.cpp'
  , 'precede.cpp'
  , 'rel.cpp'
  , 'relax.cpp'
  , 'sequence.cpp'
  , 'sorted.cpp'
  , 'trace.cpp'
  , 'unary.cpp'
  , 'unshare.cpp'
  , 'arithmetic' / 'mult.cpp'
  , 'bin-packing' / 'conflict-graph.cpp'
  , 'bin-packing' / 'propagate.cpp'
  , 'bool' / 'eqv.cpp'
  , 'branch' / 'action.cpp'
  , 'branch' / 'chb.cpp'
  , 'branch' / 'val-sel-commit.cpp'
  , 'branch' / 'view-sel.cpp'
  , 'branch' / 'view-values.cpp'
  , 'channel' / 'link-multi.cpp'
  , 'channel' / 'link-single.cpp'
  , 'distinct' / 'eqite.cpp'
  , 'distinct'/ 'cbs.cpp'
  , 'element' / 'pair.cpp'
  , 'exec' / 'when.cpp'
  , 'extensional' / 'dfa.cpp'
  , 'extensional' / 'tuple-set.cpp'
  , 'ldsb' / 'sym-imp.cpp'
  , 'ldsb' / 'sym-obj.cpp'
  , 'linear' / 'int-post.cpp'
  , 'linear'/ 'bool-post.cpp'
  , 'order' / 'propagate.cpp'
  , 'trace' / 'tracer.cpp'
  , 'var-imp' / 'bool.cpp'
  , 'var-imp' / 'int.cpp'
  , 'var' / 'bool.cpp'
  , 'var' / 'int.cpp'
  , include_directories: [project_inc]
  , dependencies: [gecodekernel_dep]
  , install: true
  )

gecodeint_dep = declare_dependency(
    link_with: gecodeint_lib
  , include_directories: [project_inc]
  , dependencies: [gecodekernel_dep]
  )
