install_headers(
    'ranges-add.hpp'
  , 'ranges-append.hpp'
  , 'ranges-array.hpp'
  , 'ranges-cache.hpp'
  , 'ranges-compl.hpp'
  , 'ranges-diff.hpp'
  , 'ranges-empty.hpp'
  , 'ranges-inter.hpp'
  , 'ranges-list.hpp'
  , 'ranges-map.hpp'
  , 'ranges-minmax.hpp'
  , 'ranges-minus.hpp'
  , 'ranges-negative.hpp'
  , 'ranges-offset.hpp'
  , 'ranges-operations.hpp'
  , 'ranges-positive.hpp'
  , 'ranges-rangelist.hpp'
  , 'ranges-scale.hpp'
  , 'ranges-singleton.hpp'
  , 'ranges-singleton-append.hpp'
  , 'ranges-size.hpp'
  , 'ranges-union.hpp'
  , 'ranges-values.hpp'
  , 'values-array.hpp'
  , 'values-bitset.hpp'
  , 'values-bitsetoffset.hpp'
  , 'values-inter.hpp'
  , 'values-list.hpp'
  , 'values-map.hpp'
  , 'values-minus.hpp'
  , 'values-negative.hpp'
  , 'values-offset.hpp'
  , 'values-positive.hpp'
  , 'values-ranges.hpp'
  , 'values-singleton.hpp'
  , 'values-union.hpp'
  , 'values-unique.hpp'
  , subdir: 'gecode/iter'
  )
